# serializer version: 1
# name: test_build_query[None]
  dict({
    'selection': list([
      dict({
        'valueCodes': list([
          '000003O5',
        ]),
        'variableCode': 'ContentsCode',
      }),
      dict({
        'valueCodes': list([
          '0114',
          '0115',
          '0117',
        ]),
        'variableCode': 'Region',
      }),
      dict({
        'valueCodes': list([
          '1',
          '2',
        ]),
        'variableCode': 'Kon',
      }),
      dict({
        'valueCodes': list([
          '-9',
          '10-19',
          '20-29',
          '30-39',
        ]),
        'variableCode': 'Alder',
      }),
      dict({
        'valueCodes': list([
          '2024M01',
          '2024M02',
          '2024M03',
        ]),
        'variableCode': 'Tid',
      }),
    ]),
  })
# ---
# name: test_build_query[code_list]
  dict({
    'selection': list([
      dict({
        'valueCodes': list([
          '000003O5',
        ]),
        'variableCode': 'ContentsCode',
      }),
      dict({
        'valueCodes': list([
          '0114',
          '0115',
          '0117',
        ]),
        'variableCode': 'Region',
      }),
      dict({
        'valueCodes': list([
          '1',
          '2',
        ]),
        'variableCode': 'Kon',
      }),
      dict({
        'codelist': 'agg_Ålder10årJ',
        'valueCodes': list([
          '-9',
          '10-19',
          '20-29',
          '30-39',
        ]),
        'variableCode': 'Alder',
      }),
      dict({
        'valueCodes': list([
          '2024M01',
          '2024M02',
          '2024M03',
        ]),
        'variableCode': 'Tid',
      }),
    ]),
  })
# ---
# name: test_expand_wildcards[tests/code_list_agg_\xc5lder10\xe5rJ.json]
  dict({
    'Alder': list([
      '-9',
      '10-19',
      '20-29',
      '30-39',
      '40-49',
      '50-59',
      '60-69',
      '70-79',
      '80-89',
      '90-99',
      '100+',
    ]),
    'ContentsCode': list([
      '000003O5',
    ]),
    'Kon': list([
      '*',
    ]),
    'Region': list([
      '0114',
      '0115',
      '0117',
    ]),
    'Tid': list([
      '2024M01',
      '2024M02',
      '2024M03',
    ]),
  })
# ---
# name: test_expand_wildcards[tests/table_variables_TAB5444.json]
  dict({
    'Alder': list([
      '0',
      '1',
      '2',
      '3',
      '4',
      '5',
      '6',
      '7',
      '8',
      '9',
      '10',
      '11',
      '12',
      '13',
      '14',
      '15',
      '16',
      '17',
      '18',
      '19',
      '20',
      '21',
      '22',
      '23',
      '24',
      '25',
      '26',
      '27',
      '28',
      '29',
      '30',
      '31',
      '32',
      '33',
      '34',
      '35',
      '36',
      '37',
      '38',
      '39',
      '40',
      '41',
      '42',
      '43',
      '44',
      '45',
      '46',
      '47',
      '48',
      '49',
      '50',
      '51',
      '52',
      '53',
      '54',
      '55',
      '56',
      '57',
      '58',
      '59',
      '60',
      '61',
      '62',
      '63',
      '64',
      '65',
      '66',
      '67',
      '68',
      '69',
      '70',
      '71',
      '72',
      '73',
      '74',
      '75',
      '76',
      '77',
      '78',
      '79',
      '80',
      '81',
      '82',
      '83',
      '84',
      '85',
      '86',
      '87',
      '88',
      '89',
      '90',
      '91',
      '92',
      '93',
      '94',
      '95',
      '96',
      '97',
      '98',
      '99',
      '100+',
    ]),
    'ContentsCode': list([
      '000003O5',
    ]),
    'Kon': list([
      '1',
      '2',
    ]),
    'Region': list([
      '0114',
      '0115',
      '0117',
    ]),
    'Tid': list([
      '2024M01',
      '2024M02',
      '2024M03',
    ]),
  })
# ---
